Ignore node_modules and .env files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ fms_backend/node_modules/
 fms_frontend/node_modules/
 fms_backend/.env
 fms_frontend/.env
+fms_backend/node_modules/
+fms_frontend/node_modules/
+fms_backend/.env
+fms_frontend/.env
