--- a/fms_backend/package.json
+++ b/fms_backend/package.json
@@ -10,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mariadb": "^3.4.2",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.3"
   },
   "description": ""
 }
